TASK: added refactored checkOrigin block

--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
     "ALLOWED_AGENDS": [
-        "insomnia"
-    ]
+        "Mozilla",
+        "AppleWebKit",
+        "Chrome"
+    ],
+    "DEBUG": false
 }
