--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "login",
+  "name": "api_template",
   "version": "1.0.0",
-  "description": "login service for the corespace api",
   "main": "service.js",
   "author": "AsP3X",
   "license": "MIT",
+  "packageManager": "yarn@3.4.1",
   "scripts": {
-    "dev": "nodemon service.js development",
-    "start": "node service.js production"
+    "start": "node service.js",
+    "dev": "nodemon service.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
@@ -16,6 +16,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.0"
+    "mongoose": "^7.0.1"
   }
 }
